@@ -1,10 +1,15 @@
 package dev.crepe.domain.bank.service.impl;
 
+import dev.crepe.domain.bank.exception.BankNameMismatchException;
+import dev.crepe.domain.bank.exception.BankNotFoundException;
 import dev.crepe.domain.bank.model.dto.request.CreateBankAccountRequest;
 import dev.crepe.domain.bank.model.dto.response.GetAccountDetailResponse;
-import dev.crepe.domain.bank.model.dto.response.GetAllAccountInfoResponse;
+import dev.crepe.domain.bank.model.dto.response.GetCoinAccountInfoResponse;
+import dev.crepe.domain.bank.model.entity.Bank;
+import dev.crepe.domain.bank.repository.BankRepository;
 import dev.crepe.domain.bank.service.BankAccountService;
 import dev.crepe.domain.core.account.exception.AccountNotFoundException;
+import dev.crepe.domain.core.account.exception.MissingAccountRequestException;
 import dev.crepe.domain.core.account.model.AddressRegistryStatus;
 import dev.crepe.domain.core.account.model.dto.request.GetAddressRequest;
 import dev.crepe.domain.core.account.model.dto.response.GetAddressResponse;
@@ -16,29 +21,34 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class BankAccountServiceImpl implements BankAccountService {
 
     private final AccountService accountService;
+    private final BankRepository bankRepository;
     private final AccountRepository accountRepository;
 
     // 은행 출금 계좌 등록
-
     @Transactional
     @Override
     public void createBankAccount(CreateBankAccountRequest request, String bankEmail) {
 
-        String bankName = request.getBankName();
-        if(bankName == null || bankName.isEmpty()) {
-            throw new IllegalArgumentException("은행 이름은 필수입니다.");
+        // bankEmail을 통해 Bank 조회
+        Bank bank = bankRepository.findByEmail(bankEmail)
+                .orElseThrow(() -> new BankNotFoundException(bankEmail));
+
+        // 조회한 bankName과 요청의 bankName 비교
+        if (!request.getBankName().equals(bank.getName())) {
+            throw new BankNameMismatchException(request.getBankName(), bank.getName());
         }
 
         // Address 요청 정보 확인
         GetAddressRequest getAddressRequest = request.getGetAddressRequest();
         if (getAddressRequest == null) {
-            throw new IllegalArgumentException("Address 요청 정보가 필요합니다.");
+            throw new MissingAccountRequestException();
         }
 
         // 계좌 등록 요청 전송
@@ -48,19 +58,18 @@ public class BankAccountServiceImpl implements BankAccountService {
 
 
     // 은행 출금 계좌 재등록
-
     @Transactional
     @Override
     public void changeBankAccount(CreateBankAccountRequest request, String bankEmail) {
 
         String bankName = request.getBankName();
-        if(bankName == null || bankName.isEmpty()) {
-            throw new IllegalArgumentException("은행 이름은 필수입니다.");
+        if (bankName == null || bankName.isEmpty()) {
+            throw new BankNameMismatchException("null", "provided");
         }
 
         GetAddressRequest getAddressRequest = request.getGetAddressRequest();
         if (getAddressRequest == null) {
-            throw new IllegalArgumentException("Address 요청 정보가 필요합니다.");
+            throw new MissingAccountRequestException();
         }
 
         accountService.reRegisterAddress( bankEmail, request.getGetAddressRequest());
@@ -69,18 +78,13 @@ public class BankAccountServiceImpl implements BankAccountService {
 
 
     // 코인별 계좌 정보 조회
-
     @Transactional(readOnly = true)
     @Override
-    public GetAccountDetailResponse getAccountByCurrency(String currency, String email) {
+    public GetAccountDetailResponse getAccountByCurrency(String currency, String bankEmail) {
 
-        GetAddressResponse response = accountService.getAddressByCurrency(currency, email);
+        GetAddressResponse response = accountService.getAddressByCurrency(currency, bankEmail);
 
-        // email을 통해 Bank 정보 조회
-        Account account = accountRepository.findByBank_EmailAndCoin_Currency(email, currency)
-                .orElseThrow(() -> new AccountNotFoundException("해당 이메일과 통화로 등록된 계좌가 없습니다."));
-
-        String bankName = account.getBank() != null ? account.getBank().getName() : null;
+        String bankName = accountService.getAccountOwnerName(bankEmail, currency);
 
         // GetAccountDetailResponse 생성 및 반환
         return GetAccountDetailResponse.builder()
@@ -93,35 +97,30 @@ public class BankAccountServiceImpl implements BankAccountService {
     // 은행 계좌 정보 조회
     @Transactional(readOnly = true)
     @Override
-    public List<GetAllAccountInfoResponse> getAccountInfoList(String email) {
+    public List<GetCoinAccountInfoResponse> getAccountInfoList(String bankEmail) {
 
-        // email 유효성 검사
-        if (email == null || email.isBlank()) {
-            throw new IllegalArgumentException("이메일은 null이거나 빈 값일 수 없습니다.");
-        }
+        Bank bank = bankRepository.findByEmail(bankEmail)
+                .orElseThrow(() -> new BankNotFoundException(bankEmail));
 
-        // email을 통해 Account 리스트 조회
-        List<Account> accounts = accountRepository.findByBank_Email(email);
-
-        // 조회된 계좌가 없는 경우 예외 처리
+        List<Account> accounts = accountRepository.findByBank_Email(bank.getEmail());
         if (accounts.isEmpty()) {
-            throw new AccountNotFoundException("해당 이메일로 등록된 계좌가 없습니다: " + email);
+            throw new AccountNotFoundException(bankEmail);
         }
 
         // 각 Account 정보를 매핑하여 GetAllAccountInfoResponse 생성
         // ACTIVE 상태의 계좌만 필터링하고 매핑
         return accounts.stream()
-                .filter(account -> account.getAddressRegistryStatus() == AddressRegistryStatus.ACTIVE)
-                .map(account -> GetAllAccountInfoResponse.builder()
-                        .bankname(account.getBank() != null ? account.getBank().getName() : null)
-                        .coinName(account.getCoin().getName())
-                        .currency(account.getCoin().getCurrency())
-                        .accountAddres(account.getAccountAddress())
-                        .tag(account.getTag())
-                        .balance(account.getBalance().toPlainString())
+                .filter(a -> a.getCoin() != null) // 코인 정보가 없는 계좌는 제외
+                .filter(a -> a.getAddressRegistryStatus() == AddressRegistryStatus.ACTIVE)
+                .map(a -> GetCoinAccountInfoResponse.builder()
+                        .bankName(a.getBank() != null ? a.getBank().getName() : null)
+                        .coinName(a.getCoin().getName())
+                        .currency(a.getCoin().getCurrency())
+                        .accountAddress(a.getAccountAddress())
+                        .tag(a.getTag())
+                        .balance(a.getBalance().toPlainString())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
-
 
 }
